tests/ui/parser/bad-char-literals.stderr
error: character constant must be escaped: `'`
  --> $DIR/bad-char-literals.rs:6:6
   |
LL |     ''';
   |      ^ help: escape the character: `\'`

error: character constant must be escaped: `\n`
  --> $DIR/bad-char-literals.rs:10:6
   |
LL |       '
   |  ______^
LL | | ';
   | |_ help: escape the character: `\n`

error: character constant must be escaped: `\r`
  --> $DIR/bad-char-literals.rs:15:6
   |
LL |     '';
   |      ^ help: escape the character: `\r`

error: character constant must be escaped: `\t`
  --> $DIR/bad-char-literals.rs:18:6
   |
LL |     '    ';
   |      ^^^^ help: escape the character: `\t`

error: aborting due to 4 previous errors

